Fix for dark mode icons

--- a/src/components/Install/styles.module.scss
+++ b/src/components/Install/styles.module.scss
@@ -42,7 +42,7 @@
     }
 
     .InstallIcon {
-      background: var(--ifm-font-color-base);
+      background: #191927;
     }
   }
 
